--- a/index.html
+++ b/index.html
@@ -74,9 +74,9 @@ following measures:</p>
   <li>Colouring support in editors.</li>
 </ul>
 
-<p>NOTE: Ribosome trades speed for readability/maintainability and thus it
-isn't well suited for performance-critical tasks such as, for example,
-generating HTML on the fly.</p>
+<p>Note however, that ribosome trades speed for readability/maintainability
+and thus it isn't well suited for performance-critical tasks such as, for
+example, generating HTML on the fly.</p>
 
 <h2>Download</h2>
 
