Added documentation page

--- a/index.html
+++ b/index.html
@@ -91,6 +91,10 @@ download the scripts here:</p>
 &nbsp;
 <a class="download" href="ribosome.py" download>ribosome.py</a>
 
+<h2>Documentation</h2>
+
+Find detailed documentation <a href="documentation.html">here</a>
+
 <h2>License</h2>
 
 <p>Ribosome is licensed under MIT/X11 license.</p>
