More work on the website

--- a/documentation.html
+++ b/documentation.html
@@ -7,7 +7,21 @@
 </head>
 <body>
 
-<h2>Command line</h2>
+<h1>RIBOSOME</h1>
+
+<p>A simple generic code generation tool</p>
+
+<ul id='toplist'>
+<li><a href="index.html">Home</a></li>
+<li><a href="download.html">Download</a></li>
+<li><a href="documentation.html">Documentation</a></li>
+<li><a href="development.html">Development</a></li>
+<li><a href="community.html">Community</a></li>
+</ul>
+
+<h2>Documentation</h2>
+
+<h3>Command line</h3>
 
 <p>The generator takes one argument, the script file, also known as
 DNA file.</p>
@@ -34,12 +48,6 @@ interpreter is called "node" on your system, create a symlink for it:</p>
 <pre>
 ln -s /usr/bin/node /usr/bin/nodejs
 </pre>
-
-<h2>Documentation</h2>
-
-<p>At this point you are ready to use ribosome to do your own code generation.
-However, you may benefit from reading about the finer points of the tool
-in the following sections.</p>
 
 <h3>Control language</h3>
 
@@ -622,16 +630,6 @@ using O (capital letter O) command. Pass the name of the language as an
 argument:</p>
 
 <img src="vim4.png"/>
-
-<h3>Other editors</h3>
-
-<p>In the future, we intend to provide highlighting rules for the most common
-editors. Any help in this area will be highly appreciated!</p>
-
-<h2>Third party resources</h2>
-
-<p>A tutorial: <a href="http://thrashing.io/tutorial/5515010fdf6f8bd30964e66d">
-http://thrashing.io/tutorial/5515010fdf6f8bd30964e66d</a></p>
 
 </body>
 </html>
