--- a/index.html
+++ b/index.html
@@ -9,7 +9,15 @@
 
 <h1>RIBOSOME</h1>
 
-<p>A simple generic code generation tool.</p>
+<p>A simple generic code generation tool</p>
+
+<ul id='toplist'>
+<li><a href="index.html">Home</a></li>
+<li><a href="download.html">Download</a></li>
+<li><a href="documentation.html">Documentation</a></li>
+<li><a href="development.html">Development</a></li>
+<li><a href="community.html">Community</a></li>
+</ul>
 
 <h2>In 50 words</h2>
 
@@ -77,23 +85,6 @@ following measures:</p>
 <p>Note however, that ribosome trades speed for readability/maintainability
 and thus it isn't well suited for performance-critical tasks such as, for
 example, generating HTML on the fly.</p>
-
-<h2>Download</h2>
-
-<p>Ribosome is a single JavaScript, Ruby or Python script, depending on the
-control language you wish to use. Therefore, all you need to do is to install
-node.js, Ruby or Python, as required, and put the script to your path. You can
-download the scripts here:</p>
-
-<a class="download" href="ribosome.js" download>ribosome.js</a>
-&nbsp;
-<a class="download" href="ribosome.rb" download>ribosome.rb</a>
-&nbsp;
-<a class="download" href="ribosome.py" download>ribosome.py</a>
-
-<h2>Documentation</h2>
-
-Find detailed documentation <a href="documentation.html">here</a>
 
 <h2>License</h2>
 
