Link to github added

--- a/development.html
+++ b/development.html
@@ -21,7 +21,9 @@
 
 <h2>Development</h2>
 
-<p>TODO</p>
+<p>Ribosome development takes place on GiHub:</p>
+
+<p><a href="https://github.com/sustrik/ribosome">https://github.com/sustrik/ribosome</a></p>
 
 </body>
 </html>
