Revert "Experiment with download links"
This reverts commit 096200ca4dc5209c208cb54a7d0ebb3dde76c86e.

--- a/download.html
+++ b/download.html
@@ -26,11 +26,11 @@ control language you wish to use. Therefore, all you need to do is to install
 node.js, Ruby or Python, as required, and put the script to your path. You can
 download the scripts here:</p>
 
-<a class="download" target="_blank" href="https://raw.githubusercontent.com/sustrik/ribosome/7585b02ea846189e39e76e4e10d64e51709c44f1/ribosome.js" download>ribosome.js</a>
+<a class="download" href="https://raw.githubusercontent.com/sustrik/ribosome/7585b02ea846189e39e76e4e10d64e51709c44f1/ribosome.js" download>ribosome.js</a>
 &nbsp;
-<a class="download" target="_blank" href="https://raw.githubusercontent.com/sustrik/ribosome/7585b02ea846189e39e76e4e10d64e51709c44f1/ribosome.rb" download>ribosome.rb</a>
+<a class="download" href="https://raw.githubusercontent.com/sustrik/ribosome/7585b02ea846189e39e76e4e10d64e51709c44f1/ribosome.rb" download>ribosome.rb</a>
 &nbsp;
-<a class="download" target="_blank" href="https://raw.githubusercontent.com/sustrik/ribosome/7585b02ea846189e39e76e4e10d64e51709c44f1/ribosome.py" download>ribosome.py</a>
+<a class="download" href="https://raw.githubusercontent.com/sustrik/ribosome/7585b02ea846189e39e76e4e10d64e51709c44f1/ribosome.py" download>ribosome.py</a>
 
 </body>
 </html>
