Fix mailing list links

--- a/community.html
+++ b/community.html
@@ -27,11 +27,11 @@
 
 <p>Subscribe to the mailing list here:</p>
 
-<p><a href="http://www.freelists.org/list/nanomsg">http://www.freelists.org/list/nanomsg</a></p>
+<p><a href="http://www.freelists.org/list/nanomsg">http://www.freelists.org/list/ribosome</a></p>
 
 <p>Browse the mailing list archive here:</p>
 
-<p><a href="http://www.freelists.org/archive/nanomsg/">http://www.freelists.org/archive/nanomsg/</a></p>
+<p><a href="http://www.freelists.org/archive/nanomsg/">http://www.freelists.org/archive/ribosome/</a></p>
 
 <h3>Third party resources</h3>
 
