Add link to issue tracker

--- a/development.html
+++ b/development.html
@@ -25,6 +25,10 @@
 
 <p><a href="https://github.com/sustrik/ribosome">https://github.com/sustrik/ribosome</a></p>
 
+<p>Report the bugs here:</p>
+
+<p><a href="https://github.com/sustrik/ribosome/issues/new">https://github.com/sustrik/ribosome/issues/new</a></p>
+
 </body>
 </html>
 
