--- a/index.html
+++ b/index.html
@@ -46,13 +46,13 @@ for (i=3; i&gt;0; i--) {
 .}
 </pre>
 
-<p>To generate the code:</p>
+<p>To generate the code do the following:</p>
 
 <pre>
 $ ribosome.js readysteady.js.dna
 </pre>  
 
-<p>The script above produces the following output (which happens to be a
+<p>The script produces the following output (which happens to be a
 C program):</p>
 
 <pre>
