--- a/development.html
+++ b/development.html
@@ -21,7 +21,7 @@
 
 <h2>Development</h2>
 
-<p>Ribosome development takes place on GiHub:</p>
+<p>Ribosome development takes place on GitHub:</p>
 
 <p><a href="https://github.com/sustrik/ribosome">https://github.com/sustrik/ribosome</a></p>
 
