--- a/download.html
+++ b/download.html
@@ -32,6 +32,14 @@ download the scripts here:</p>
 &nbsp;
 <a class="download" href="https://raw.githubusercontent.com/sustrik/ribosome/7585b02ea846189e39e76e4e10d64e51709c44f1/ribosome.py" download>ribosome.py</a>
 
+<p>NOTE: JavaScript interpreter may be called either "node" or "nodejs",
+depending on the distro in use. ribosome.js happens to use "nodejs". If the
+interpreter is called "node" on your system, create a symlink for it:</p>
+
+<pre>
+$ ln -s /usr/bin/node /usr/bin/nodejs
+</pre>
+
 </body>
 </html>
 
