--- a/documentation.html
+++ b/documentation.html
@@ -62,8 +62,8 @@ program takes three arguments, you can run it like this:</p>
 $ ribosome.rb foo.rb arg1 arg2 arg3
 </pre>
 
-<p>However, to distinguish naive programs from ribosome scripts it is customary
-to add <tt>.dna</tt> extension to the script files. Thus, the typical command
+<p>However, to distinguish native programs from ribosome scripts it is customary
+to add <tt>.dna</tt> extension to the script file. Thus, the typical command
 line typically looks like this:</p>
 
 <p class="lang">Python:</p>
