--- a/documentation.html
+++ b/documentation.html
@@ -63,8 +63,8 @@ $ ribosome.rb foo.rb arg1 arg2 arg3
 </pre>
 
 <p>However, to distinguish native programs from ribosome scripts it is customary
-to add <tt>.dna</tt> extension to the script file. Thus, the typical command
-line typically looks like this:</p>
+to add <tt>.dna</tt> extension to the script file. So, more often the command
+line looks like this:</p>
 
 <p class="lang">Python:</p>
 <pre>
@@ -119,7 +119,7 @@ re-directed using classic UNIX pipes. For example:</p>
 
 <p class="lang">Ruby:</p>
 <pre>
-ribosome.rb test.rb.dna &gt; test.txt
+$ ribosome.rb test.rb.dna &gt; test.txt
 </pre>
 
 <p>You can also redirect the output to a specific destination directly from
