Use Ribosome name cosistently

--- a/community.html
+++ b/community.html
@@ -23,7 +23,7 @@
 
 <h3>Mailing list</h3>
 
-<p>Discussion about ribosome happens on ribosome@freelists.org mailing list.</p>
+<p>Discussion about Ribosome happens on ribosome@freelists.org mailing list.</p>
 
 <p>Subscribe to the mailing list here:</p>
 
