--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ following measures:</p>
   <li>Colouring support in editors.</li>
 </ul>
 
-<p>Note however, that ribosome trades speed for readability/maintainability
+<p>Note however, that Ribosome trades speed for readability/maintainability
 and thus it isn't well suited for performance-critical tasks such as, for
 example, generating HTML on the fly.</p>
 
