Link to the design doc added

--- a/community.html
+++ b/community.html
@@ -35,6 +35,8 @@
 
 <h3>Third party resources</h3>
 
+<p>Blog post about Ribosome design: <a href="http://250bpm.com/blog:37">http://250bpm.com/blog:37</a><p>
+
 <p>A tutorial: <a href="http://thrashing.io/tutorial/5515010fdf6f8bd30964e66d">
 http://thrashing.io/tutorial/5515010fdf6f8bd30964e66d</a></p>
 
