--- a/development.html
+++ b/development.html
@@ -41,13 +41,11 @@ $ git clone https://github.com/sustrik/ribosome.git
 
 <h3>Tests</h3>
 
-<p>To run the tests go to the root directory of the project and do the
-following:</p>
+<p>To run the tests:</p>
 
 <pre>
-$ ./autogen.sh
-$ ./configure
-$ make check
+$ cd tests
+$ make
 </pre>
 
 <h3>Releasing</h3>
