--- a/download.html
+++ b/download.html
@@ -26,18 +26,18 @@ control language you wish to use. Therefore, all you need to do is to install
 node.js, Ruby or Python, as required, and put the script to your path. You can
 download the scripts here:</p>
 
-<a class="download" href="https://raw.githubusercontent.com/sustrik/ribosome/f5562136eeaf81db7c2602fefaf6753564057612/ribosome.js" download>ribosome.js</a>
+<a class="download" href="https://raw.githubusercontent.com/sustrik/ribosome/7558d74c6253787a407a0092f1c285b66e3752a2/ribosome.js" download>ribosome.js</a>
 &nbsp;
-<a class="download" href="https://raw.githubusercontent.com/sustrik/ribosome/f5562136eeaf81db7c2602fefaf6753564057612/ribosome.rb" download>ribosome.rb</a>
+<a class="download" href="https://raw.githubusercontent.com/sustrik/ribosome/7558d74c6253787a407a0092f1c285b66e3752a2/ribosome.rb" download>ribosome.rb</a>
 &nbsp;
-<a class="download" href="https://raw.githubusercontent.com/sustrik/ribosome/f5562136eeaf81db7c2602fefaf6753564057612/ribosome.py" download>ribosome.py</a>
+<a class="download" href="https://raw.githubusercontent.com/sustrik/ribosome/7558d74c6253787a407a0092f1c285b66e3752a2/ribosome.py" download>ribosome.py</a>
 
 <p>NOTE: JavaScript interpreter may be called either "node" or "nodejs",
-depending on the distro in use. ribosome.js happens to use "nodejs". If the
-interpreter is called "node" on your system, create a symlink for it:</p>
+depending on the distro in use. ribosome.js happens to use "node". If the
+interpreter is called "nodejs" on your system, create a symlink for it:</p>
 
 <pre>
-$ ln -s /usr/bin/node /usr/bin/nodejs
+$ ln -s /usr/bin/nodejs /usr/bin/node
 </pre>
 
 </body>
