Travis widget added to website
Signed-off-by: Martin Sustrik <sustrik@250bpm.com>

--- a/development.html
+++ b/development.html
@@ -33,6 +33,10 @@
 $ git clone https://github.com/sustrik/ribosome.git
 </pre>
 
+<h3>Continuous integration</h3>
+
+[![Build Status](https://travis-ci.org/sustrik/ribosome.svg?branch=master)](https://travis-ci.org/sustrik/ribosome)
+
 <h3>Bug tracker</h3>
 
 <p>Report the bugs here:</p>
