Oops. Travis widget should be in iframe.
Signed-off-by: Martin Sustrik <sustrik@250bpm.com>

--- a/development.html
+++ b/development.html
@@ -35,7 +35,7 @@ $ git clone https://github.com/sustrik/ribosome.git
 
 <h3>Continuous integration</h3>
 
-[![Build Status](https://travis-ci.org/sustrik/ribosome.svg?branch=master)](https://travis-ci.org/sustrik/ribosome)
+<iframe src="https://travis-ci.org/sustrik/ribosome.svg?branch=master)](https://travis-ci.org/sustrik/ribosome"></iframe>
 
 <h3>Bug tracker</h3>
 
