--- a/development.html
+++ b/development.html
@@ -37,6 +37,8 @@ $ git clone https://github.com/sustrik/ribosome.git
 
 <iframe class="travis-widget" src="https://travis-ci.org/sustrik/ribosome.svg?branch=master"></iframe>
 
+<a href="https://travis-ci.org/sustrik/ribosome">https://travis-ci.org/sustrik/ribosome</a>
+
 <h3>Bug tracker</h3>
 
 <p>Report the bugs here:</p>
